[B]Retrospect v5.5.xx - Changelog - 2022-xx-xx[/B]

t.b.d.

[B]Framework related[/B]
* Fixed: Better handling of incorrect PIN codes for the Retrospect Vault.
* Changed: Workaround for possible cookie corruption on some systems (Fixes #1666).

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Updated: TV4.se requires login now (Fixes #1657).
* Changed: Notify RTL users if a login error occurs (See #1658).
* Fixed: `astimezone()` error in TV4 (Fixes #1660).
* Fixed: TV4.se clips had no audio (Fixes #1662).
* Fixed: Removed numeric tags in subtitles for TV4Play.se.
* Fixed: Too many new lines in UR Play subtitles (Fixes #1663).